--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                                 <h2><span>01</span>About me</h2>
 							</div><!-- end Section Title -->
 							<h1>Hello, I am <strong>Saiju Paulose</strong></h1>
-							<p>Iam a 22 year old Electronics and Communication trainee engineering graduate.I love coding and create reponsive websites.</p>
+							<p>Iam a 22 year old Electronics and Communication trainee engineering graduate.I love coding and creating reponsive websites.</p>
 							
                             <div class="skills">
                                 <!-- Skill 1 -->
@@ -202,7 +202,7 @@
                                 </div>
                                 <div>
                                     <h3>Front-end Developer</h3>
-                                    <p>Create Resposive Websites using HTML,CSS,JS and Bootstrap.</p>
+                                    <p>Creating Responsive Websites using HTML,CSS,JS and Bootstrap.</p>
                                 </div>
                             </div>
                             <!-- Service box 2 -->
@@ -222,7 +222,7 @@
                                 </div>
                                 <div>
                                     <h3>Programming</h3>
-                                    <p>Iam eager to learn coding,still learning coding mainly C,C++,Java. </p>
+                                    <p>Iam passionate about coding,still iam learning coding and logical skills </p>
                                 </div>
                             </div>
                             <!-- Service box 4 -->
